objects/Contract.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__TerminationType__c</fullName>
        <description>The type of contract termination</description>
        <label>Termination Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>With Cause</fullName>
                </value>
                <value>
                    <fullName>Without Cause</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalMonthlyDiscount__c</fullName>
        <label>Total: Monthly Discount</label>
        <summarizedField>vlocity_cmt__ContractLineItem__c.vlocity_cmt__RecurringDiscountPrice__c</summarizedField>
        <summaryForeignKey>vlocity_cmt__ContractLineItem__c.vlocity_cmt__ContractId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalOneTimeDiscount__c</fullName>
        <label>Total: One Time Discount</label>
        <summarizedField>vlocity_cmt__ContractLineItem__c.vlocity_cmt__OneTimeDiscountPrice__c</summarizedField>
        <summaryForeignKey>vlocity_cmt__ContractLineItem__c.vlocity_cmt__ContractId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>startDatee__c</columns>
        <columns>Enddatee__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTRACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>startDatee__c</columns>
        <columns>Enddatee__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>startDatee__c</columns>
        <columns>Enddatee__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <recordTypes>
        <fullName>ContractLifecycleManagement</fullName>
        <active>false</active>
        <label>Contract Lifecycle Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grid_ActivatedContrat</fullName>
        <active>true</active>
        <label>Contract Activated</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Contract</fullName>
        <active>true</active>
        <label>Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__ReadOnlyContract</fullName>
        <active>true</active>
        <label>Read Only</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Contract_Dates_Validation_Rule</fullName>
        <active>true</active>
        <description>Start Contract date should be before End Contract date</description>
        <errorConditionFormula>AND( NOT(ISBLANK( StartDate  )) ,NOT(ISBLANK( EndDate )), StartDate &gt; EndDate )</errorConditionFormula>
        <errorMessage>The start date of the contract must be before the end date of the contract</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FrameAgreementActivated</fullName>
        <active>true</active>
        <description>This validation rule stops the activation of a contract from the Path component without using the Frame Agreement Button.</description>
        <errorConditionFormula>AND(
  ISCHANGED(Status),
  NOT(ISNEW()),
  ISPICKVAL(Status, &quot;Activated&quot;),
  Grid_isFrameAgreedActivated__c = false
)</errorConditionFormula>
        <errorMessage>Please activate using &apos;Activate Frame Agreement button&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Grid_ConditionTermsNotPopulated</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Status ,&quot;Handover&quot;) &amp;&amp; ISPICKVAL(Grid_Condition_Terms__c,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Grid_Condition_Terms__c</errorDisplayField>
        <errorMessage>Please fill in the Condition Terms</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Grid_ContractSendingDateMandatory</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Status ,&quot;Contract Sent- Awaiting Client Reply&quot;) &amp;&amp; (ISNULL(Contract_Sending_Date__c) || ISNULL(Offer_Validity__c))</errorConditionFormula>
        <errorMessage>Please fill in the Contract Sending Date and the Offer Validity information</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Grid_ContractSigned</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Status ,&quot;Contract Signed&quot;) &amp;&amp; ISNULL(Contract_Signature_Date__c)</errorConditionFormula>
        <errorDisplayField>Contract_Signature_Date__c</errorDisplayField>
        <errorMessage>Please fill in the Contract Signature Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Grid_EditRecordFailNotOwner</fullName>
        <active>false</active>
        <errorConditionFormula>AND
(
NOT(ISNEW()), NOT(ISCHANGED(OwnerId)),
$Profile.Name &lt;&gt;&apos;System Administrator&apos;,
$User.Id &lt;&gt; OwnerId

)</errorConditionFormula>
        <errorMessage>Only the Owner can update the record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Grid_Scheda231DeliveryDatesValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK( Grid_Scheda231DeliveryCreatedDate__c   )),NOT(ISBLANK( Grid_Scheda231DeliveryLastEditDate__c   )),Grid_Scheda231DeliveryCreatedDate__c &gt; Grid_Scheda231DeliveryLastEditDate__c)</errorConditionFormula>
        <errorMessage>Scheda 231 Delivery Created date should be before Scheda 231 Delivery Las Modification date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Scheda_231_dates_validation_rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK( Scheda_231_Created_Date__c  )),NOT(ISBLANK( Scheda_231_last_modification_date__c  )),Scheda_231_Created_Date__c &gt; Scheda_231_last_modification_date__c)</errorConditionFormula>
        <errorMessage>Scheda 231 Created date should be before Scheda 231 Las Modification date</errorMessage>
    </validationRules>
</CustomObject>